sumo/tests/sumo/extended/vaporizer/errors/end_not_numeric/errors.sumo
Warning: Emitter are deprecated; use departpos/departspeed within routes instead.
Error: Attribute 'end' in definition of a vaporizer is not a time value.
Quitting (on error).
